Prevent wrapping of section actions

--- a/indico/modules/events/registration/client/styles/regform.module.scss
+++ b/indico/modules/events/registration/client/styles/regform.module.scss
@@ -346,6 +346,8 @@
 }
 
 .section-actions {
+  white-space: nowrap;
+
   a {
     font-size: 1.2em;
   }
